Bug 186103. r=ere, sr=tor.  Fix PNG background images being too dark.  Windows Only.